--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,11 @@ default_expiration: "7d"
 env_variables:
   RECAPTCHA_SITE_KEY: 6LcH_uYUAAAAAMf8VkgQEQM7uAGcZjXKLm9RWewA
 
+instance_class: F1
+automatic_scaling:
+  max_concurrent_requests: 80
+  max_instances: 10
+
 handlers:
 - url: /favicon\.ico
   static_files: static/favicon.ico
